# AE-PACT

./: README  SM_correlation.py  all_fig.sh  bar.py  compare-ansor-cnnopt-2080.sh  compare-ansor-cnnopt-v100.sh  gen_duration_log.py  gen_fig.py  gen_profile_duration_log.sh  get_duration_ansor_our.py  get_duration_cudnn.py  get_sm_ansor_our.py  regress.py  sm-cor-2080.sh  sm-cor-v100.sh
Ansor/ansor_profile-2080Ti/: adefo0.csv  adefo1.csv  adefo2.csv  adefo3.csv  adefo4.csv  adefo5.csv  ares1.csv  ares10.csv  ares11.csv  ares12.csv  ares2.csv  ares3.csv  ares4.csv  ares5.csv  ares6.csv  ares7.csv  ares8.csv  ares9.csv  ayolo0.csv  ayolo1.csv  ayolo2.csv  ayolo3.csv  ayolo4.csv  ayolo5.csv  ayolo6.csv  ayolo7.csv  ayolo8.csv  ayolo9.csv
Ansor/ansor_profile-v100/: adefo0.csv  adefo1.csv  adefo2.csv  adefo3.csv  adefo4.csv  adefo5.csv  ares1.csv  ares10.csv  ares11.csv  ares12.csv  ares2.csv  ares3.csv  ares4.csv  ares5.csv  ares6.csv  ares7.csv  ares8.csv  ares9.csv  ayolo0.csv  ayolo1.csv  ayolo2.csv  ayolo3.csv  ayolo4.csv  ayolo5.csv  ayolo6.csv  ayolo7.csv  ayolo8.csv  ayolo9.csv
Ansor/src_code_2080/: CMakeLists.txt  Defo0.cu  Defo01.cu  Defo1.cu  Defo11.cu  Defo2.cu  Defo21.cu  Resnet1.cu  Resnet10.cu  Resnet11.cu  Resnet12.cu  Resnet2.cu  Resnet3.cu  Resnet4.cu  Resnet5.cu  Resnet6.cu  Resnet7.cu  Resnet8.cu  Resnet9.cu  YOLO0.cu  YOLO1.cu  YOLO2.cu  YOLO3.cu  YOLO4.cu  YOLO5.cu  YOLO6.cu  YOLO7.cu  YOLO8.cu  YOLO9.cu  common.h  main.cpp  p_tvm_defo.sh  p_tvm_res.sh  p_tvm_yolo.sh  tvm_profile_all.sh
Ansor/src_code_v100/: CMakeLists.txt  Defo0.cu  Defo01.cu  Defo1.cu  Defo11.cu  Defo2.cu  Defo21.cu  Resnet1.cu  Resnet10.cu  Resnet11.cu  Resnet12.cu  Resnet2.cu  Resnet3.cu  Resnet4.cu  Resnet5.cu  Resnet6.cu  Resnet7.cu  Resnet8.cu  Resnet9.cu  YOLO0.cu  YOLO1.cu  (+9 more)
cuDNN/src_code/: CMakeLists.txt  common.h  cudnn.cu  cudnn_profile.sh  export_env.sh  main.cpp  pcc.py
lop-2080/: create_hfhf.py  dmrankorder_for_RSkernel.py  dmrankorder_for_RSkernel_stride2.py  dmrankorder_for_Skernel_3.py  get_N.py  machine_info_regi.py  res_processing.py  res_table_for_RSkernel.py  res_table_for_RSkernel_stride2.py  res_table_for_Skernel_3.py  run.sh  utildataprepare.py
lop-v100/: create_hfhf.py  dmrankorder_for_RSkernel.py  dmrankorder_for_RSkernel_stride2.py  dmrankorder_for_Skernel_3.py  get_N.py  machine_info_regi.py  res_table_for_RSkernel.py  res_table_for_RSkernel_stride2.py  res_table_for_Skernel_3.py  run.sh  utilfunc.py
(+698 files in other folders)
